--- a/Rental/Rental.WEB/Views/Rent/Index.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@{
+﻿@model Rental.WEB.Models.View_Models.Rent.IndexVM
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@Styles.Render("~/Content/styles-rent/index")
 
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +16,52 @@
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-8">
+        @foreach (var i in Model.Cars)
+        {
+            <div class="col-md-12 car-item">
+                <div class="row">
+                    <div class="col-3">
+                        <img />
+                    </div>
+                    <div class="col-9">
+                        <h2>@i.Model</h2>
+                        <h3>@i.Brand.Name</h3>
+                        <h4>@i.Price</h4>
+                        <hr />
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item">@i.Кoominess</li>
+                            <li class="list-group-item">@i.Transmission.Category</li>
+                            <li class="list-group-item">@i.Fuel</li>
+                        </ul>
+                        <p>Сосотояние: @i.Quality.Text</p>
+                        <p class="text-right"><a class="btn btn-dark" href="@Url.Action("Car","Rent",new { id=i.Id})">Подробнее &raquo;</a></p>
+                    </div>
+                </div>
+            </div>
+        }
+        @foreach (var i in Model.Cars)
+        {
+            <div class="col-md-12 car-item">
+                <div class="row">
+                    <div class="col-3">
+                        <img />
+                    </div>
+                    <div class="col-9">
+                        <h2>@i.Model</h2>
+                        <h3>@i.Brand.Name</h3>
+                        <h4>@i.Price</h4>
+                        <hr />
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item">@i.Кoominess</li>
+                            <li class="list-group-item">@i.Transmission.Category</li>
+                            <li class="list-group-item">@i.Fuel</li>
+                        </ul>
+                        <p>Сосотояние: @i.Quality.Text</p>
+                        <p class="text-right"><a class="btn btn-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866"></a></p>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 </div>
