New log attribute

--- a/Rental/Rental.WEB/Views/Admin/CreateCar.cshtml
+++ b/Rental/Rental.WEB/Views/Admin/CreateCar.cshtml
@@ -236,7 +236,7 @@
     //target.autocomplete({ source: target.attr("data-autocomplete-source") });
     }
     function DeleteProperty(id) {
-    if ($(".property").length > 1)
+    //if ($(".property").length > 1)
     $("#property-" + id).remove();
 
     }
