--- a/Rental/Rental.WEB/Views/Account/Login.cshtml
+++ b/Rental/Rental.WEB/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
+<div class="form-horizontal ">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,20 +26,13 @@
         </div>
     </div>
 
-    <div class="form-group row">
-        <div class="col-6 text-left">
-            <a href="@Url.Action("Register","Account")" class="btn btn-default">Регистрация</a>
-        </div>
-        <div class="col-6 text-right">
-            <input type="submit" value="Войти" class="btn btn-default" />
+    <div class="form-group">
+        <div class="col-md-offset-4 col-md-10">
+            <input type="submit" value="Войти" class="btn btn-default btn-dark" />
         </div>
     </div>
 </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
