--- a/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
+++ b/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
@@ -46,7 +46,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control", value=(Model?.DateOfBirth.ToString("YYYY-mm-DD")) } })
                 @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -54,10 +54,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfExpiry, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfExpiry, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateOfExpiry, new { htmlAttributes = new { @class = "form-control", value = (Model?.DateOfExpiry.ToString("YYYY-mm-DD")) } })
                 @Html.ValidationMessageFor(model => model.DateOfExpiry, "", new { @class = "text-danger" })
             </div>
         </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.Number, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -86,7 +87,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfIssue, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfIssue, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateOfIssue, new { htmlAttributes = new { @class = "form-control", value = (Model?.DateOfIssue.ToString("YYYY-mm-DD")) } })
                 @Html.ValidationMessageFor(model => model.DateOfIssue, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -117,7 +118,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Создать профиль" class="btn btn-default" />
+                <input type="submit" value="Создать профиль" class="btn btn-default btn-dark" />
             </div>
         </div>
     </div>
