--- a/Rental/Rental.WEB/Views/Client/MakeOrder.cshtml
+++ b/Rental/Rental.WEB/Views/Client/MakeOrder.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Rental.WEB.Models.Domain_Models.Rent.OrderDM
 
 @{
-    ViewBag.Title = "MakeOrder";
+    ViewBag.Title = "Заказ";
 }
 
 @using (Html.BeginForm()) 
 {
     @Html.HiddenFor(x => x.Car.Id);
-    <p>@Model.Car.Brand.Name @Model.Car.Model</p>
-    <p>@Model.Car.Price</p>
+    <h3><b>Автомобиль: </b> @Model.Car.Brand.Name @Model.Car.Model</h3>
+    <h4><b>Стоимость за сутки: </b>@Model.Car.Price грн.</h4>
     <hr />
     @Html.AntiForgeryToken()
     
@@ -18,7 +18,7 @@
             @Html.LabelFor(model => model.WithDriver, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.WithDriver)
+                    @Html.EditorFor(model => model.WithDriver,new { htmlAttributes = new { @class = "checkbox" } })
                     @Html.ValidationMessageFor(model => model.WithDriver, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateStart, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateStart, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateStart, new { htmlAttributes = new { @class = "form-control", @Value = (Model?.DateStart.ToString("yyyy-MM-dd")) } })
                 @Html.ValidationMessageFor(model => model.DateStart, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,14 +35,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateEnd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateEnd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateEnd, new { htmlAttributes = new { @class = "form-control", @Value = (Model?.DateEnd.ToString("yyyy-MM-dd")) } })
                 @Html.ValidationMessageFor(model => model.DateEnd, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Заказть" class="btn btn-default btn-dark" />
             </div>
         </div>
     </div>
