--- a/Rental/Rental.WEB/Views/Client/UpdateProfile.cshtml
+++ b/Rental/Rental.WEB/Views/Client/UpdateProfile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "UpdateProfile";
 }
 
-@Html.BeginForm(){
+@using(Html.BeginForm()){
 
 @Html.AntiForgeryToken()
 
@@ -49,7 +49,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control", @Value = (Model?.DateOfBirth.ToString("yyyy-MM-dd")) } })
             @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -57,7 +57,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DateOfExpiry, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DateOfExpiry, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.DateOfExpiry, new { htmlAttributes = new { @class = "form-control", @Value = (Model?.DateOfExpiry.ToString("yyyy-MM-dd")) } })
             @Html.ValidationMessageFor(model => model.DateOfExpiry, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -89,11 +89,10 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DateOfIssue, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DateOfIssue, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.DateOfIssue, new { htmlAttributes = new { @class = "form-control", @Value = (Model?.DateOfIssue.ToString("yyyy-MM-dd")) } })
             @Html.ValidationMessageFor(model => model.DateOfIssue, "", new { @class = "text-danger" })
         </div>
     </div>
-
     <div class="form-group">
         @Html.LabelFor(model => model.RNTRC, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -120,7 +119,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Обновить данные" class="btn btn-default btn-dark" />
         </div>
     </div>
 </div>
