--- a/Rental/Rental.WEB/Views/Rent/Index.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Index.cshtml
@@ -4,62 +4,87 @@
     ViewBag.Title = "Home Page";
 }
 
-@Styles.Render("~/Content/styles-rent/index")
+@Styles.Render("~/Content/styles/rent/index")
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-4" style="background-color:black; height:1000px;">
+        sd
     </div>
     <div class="col-md-8">
+
         @foreach (var i in Model.Cars)
         {
             <div class="col-md-12 car-item">
                 <div class="row">
-                    <div class="col-3">
-                        <img />
+                    <div class="col-md-6">
+                        <!-- Carousel container -->
+                        <div id="my-pics-@i.Id" class="carousel slide " data-ride="carousel" data-interval="false" >
+                            <!-- Indicators -->
+                            @if (i.Images.Count > 1)
+                            {
+                                <ol class="carousel-indicators">
+                                    @for (int j = 0; j < i.Images.Count; j++)
+                                    {
+                                        <li data-target="#my-pics" data-slide-to="@j" class="@(j == 0 ? "active" : "")"></li>
+                                    }
+                                </ol>
+                            }
+                                <!-- Content -->
+                                <div class="carousel-inner" role="listbox">
+                                    <!-- Slide 1 -->
+                                    @for (int j = 0; j < i.Images.Count; j++)
+                                    {
+                                        <div class="item @(j==0?"active":"")">
+                                            <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(i.Images[j].Photo))" alt="@i.Images[j].Text">
+                                        </div>
+                                    }
+                                </div>
+                                @if (i.Images.Count > 1)
+                                {
+                                    <!-- Previous/Next controls -->
+                                    <a class="left carousel-control" href="#my-pics-@i.Id" role="button" data-slide="prev">
+                                        <span class="icon-prev" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" href="#my-pics-@i.Id" role="button" data-slide="next">
+                                        <span class="icon-next" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+
+
+                                }
+                            </div>
                     </div>
-                    <div class="col-9">
-                        <h2>@i.Model</h2>
-                        <h3>@i.Brand.Name</h3>
-                        <h4>@i.Price</h4>
-                        <hr />
+                    <div class="col-md-6">
+                        <h2>@i.Brand.Name @i.Model</h2>
+                        <h4 class="price text-right">@i.Price грн. сутки</h4>
+                        <h5>Качество: @i.Quality.Text</h5>
+
                         <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item">@i.Кoominess</li>
-                            <li class="list-group-item">@i.Transmission.Category</li>
-                            <li class="list-group-item">@i.Fuel</li>
+                            <li class="list-group-item">
+                                <span class="glyphicon glyphicon-user"></span>
+                                @i.Кoominess
+                            </li>
+                            <li class="list-group-item">
+                                <span class="glyphicon glyphicon-transfer"></span>
+                                @i.Transmission.Category
+                            </li>
+                            <li class="list-group-item">
+                                <span class="glyphicon glyphicon-fire"></span>
+                                @i.Fuel
+                            </li>
+                            <li class="list-group-item">
+                                <span class="glyphicon glyphicon-forward"></span>
+                                @i.EngineVolume
+                            </li>
                         </ul>
-                        <p>Сосотояние: @i.Quality.Text</p>
-                        <p class="text-right"><a class="btn btn-dark" href="@Url.Action("Car","Rent",new { id=i.Id})">Подробнее &raquo;</a></p>
+                        <p class="text-right">
+                            <a class="btn btn-default btn-dark" href="@Url.Action("Car","Rent",new { id=i.Id})">Подробнее &raquo;</a>
+                        </p>
                     </div>
-                </div>
-            </div>
-        }
-        @foreach (var i in Model.Cars)
-        {
-            <div class="col-md-12 car-item">
-                <div class="row">
-                    <div class="col-3">
-                        <img />
-                    </div>
-                    <div class="col-9">
-                        <h2>@i.Model</h2>
-                        <h3>@i.Brand.Name</h3>
-                        <h4>@i.Price</h4>
-                        <hr />
-                        <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item">@i.Кoominess</li>
-                            <li class="list-group-item">@i.Transmission.Category</li>
-                            <li class="list-group-item">@i.Fuel</li>
-                        </ul>
-                        <p>Сосотояние: @i.Quality.Text</p>
-                        <p class="text-right"><a class="btn btn-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866"></a></p>
-                    </div>
+                    <div class="col-md-12">
+
+                   </div>
                 </div>
             </div>
         }
