--- a/Rental/Rental.WEB/Views/Shared/Register.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/Register.cshtml
@@ -47,21 +47,13 @@
         </div>
     </div>
 
-    <div class="form-group row">
-        <div class="col-6 text-left">
-            <a href="@Url.Action("Login","Account")" class="btn btn-default">Вход</a>
-        </div>
-        <div class="col-6 text-right">
-            <input type="submit" value="Регистрация" class="btn btn-default" />
+    <div class="form-group">
+        <div class="col-md-offset-3 col-md-10">
+            <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-dark" />
         </div>
     </div>
 </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
