--- a/Rental/Rental.WEB/Views/Shared/_Layout.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/_Layout.cshtml
@@ -1,82 +1,126 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title – приложение ASP.NET</title>
+    <title>@ViewBag.Title </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <style>
-        body{
-            padding:0!important;
-            margin-left:0!important;
-        }
-        </style>
+    @Styles.Render("~/Content/styles/shared/layout")
+    @*<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
 </head>
 <body>
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>*@
     <header>
-        <div class="row">
-            <div class="col-4 text-center">Номер</div>
-            <div class="col-4 text-center">Время работы</div>
-            <div class="col-4 text-center">Адрес</div>
-        </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <nav class="navbar navbar-default" id="colorful-nav">
+            <div class="container-fluid bg-black">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="@Url.Action("Index","Rent")">
+                            <img src="@Url.Content("~/Images/logo.png")" alt="logo">
+                        </a>
+
+
+                    </div>
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <div id="user-page" class="navbar-right"><a href="@Url.Action("ShowUser","Account")" class="btn btn-default">@User.Identity.Name</a></div>
+                    }
+                    <div class="navbar-right">
+                        <button type="button" class="navbar-toggle " data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="@Url.Content("~/Images/logo.png")" alt="logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">
-                                Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        @if (User.IsInRole("client"))
+                        {
+                            <li class="nav-item-custom" style="width:25%;">
+                                <a href="@Url.Action("Index","Rent")">
+                                    <span class="glyphicon glyphicon-home"></span>
+                                    <h5>ГЛАВНАЯ</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item-custom" style="width:25%;">
+                                <a href="@Url.Action("ShowProfile","Client")">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                    <h5>ПРОФИЛЬ</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item-custom" style="width:25%;">
+                                <a href="@Url.Action("ShowUserOrders","Client")">
+                                    <span class="glyphicon glyphicon-list-alt"></span>
+                                    <h5>ЗАКАЗЫ</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item-custom" style="width:25%;">
+                                <a href="@Url.Action("ShowPayments","Client")">
+                                    <span class="glyphicon glyphicon-btc"></span>
+                                    <h5>ТРАНЗАКЦИИ</h5>
+                                </a>
+                            </li>
+                            @*<li class="nav-item-custom"><a href="#"><span class="glyphicon glyphicon-info-sign"></span><h5>ABOUT</h5></a></li>
+                            <li class="nav-item-custom"><a href="#"><span class="glyphicon glyphicon-earphone"></span><h5>CONTACT</h5></a></li>
+                            <li class="nav-item-custom"><a href="#"><span class="glyphicon glyphicon-search"></span><h5>SEARCH</h5></a></li>*@
+                        }
+                        else
+                        {
+                            <li class="nav-item-custom" style="width:33%;">
+                                <a href="@Url.Action("Index","Rent")">
+                                    <span class="glyphicon glyphicon-home"></span>
+                                    <h5>ГЛАВНАЯ</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item-custom" style="width:33%;">
+                                <a href="@Url.Action("Login","Account")">
+                                    <span class="glyphicon glyphicon-log-in"></span>
+                                    <h5>ВОЙТИ</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item-custom" style="width:33%;">
+                                <a href="@Url.Action("Register","Account")">
+                                    <span class="glyphicon glyphicon-registration-mark"></span>
+                                    <h5>РЕГИСТРАЦИЯ</h5>
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container body-content">
+    <div id="body" class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
-        </footer>
+
     </div>
+
+    <footer class="container-fluid text-center">
+        <div class="col-md-6">
+            <p>Наш адрес: Харьков улица Сумская 18</p>
+            <p>Телефон: +380999626899</p>
+            <p>Почта: cardoor@gmail.com</p>
+        </div>
+        <div class="col-md-6">
+            <a>
+                <img src="@Url.Content("~/Images/insta.ico")" />
+            </a>
+            <a>
+                <img src="@Url.Content("~/Images/yt.ico")" />
+            </a>
+            <a>
+                <img src="@Url.Content("~/Images/fb.ico")" />
+            </a>
+        </div>
+        <div class="col-md-12">
+            <p > @DateTime.Now.Year Все права защищены </p>
+        </div>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
