--- a/Rental/Rental.WEB/Views/Shared/Register.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.View_Models.Account.RegisterVM
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Регистрация";
     bool isManager = false;
     if (ViewBag.CreatingManger != null)
     {
