--- a/Rental/Rental.WEB/Views/Admin/GetCars.cshtml
+++ b/Rental/Rental.WEB/Views/Admin/GetCars.cshtml
@@ -1,22 +1,43 @@
 ﻿@model Rental.WEB.Models.View_Models.Admin.GetCarsVM
 
 @{
-    ViewBag.Title = "GetCars";
+    ViewBag.Title = "Машины";
 }
 
-<div class="row">
-   @foreach(var i in Model.CarsDM)
-   {
-    <div>
-        <h4>@i.Brand.Name @i.Model</h4>
-        <h5>@i.Number</h5>
-        <p>@i.Price</p>
+@Styles.Render("~/Content/styles/admin/get-cars")
 
-        @if (!i.IsDeleted)
+<div class="row">
+    <div class="col-md-4" style="background-color:black; height:1000px;">
+        sd
+    </div>
+    <div class=" col-md-8">
+        @foreach (var i in Model.CarsDM)
         {
-            <a class="btn btn-danger" href="@Url.Action("Delete","Admin",new { id=i.Id})">Удалить</a>
-            <a class="btn btn-secondary" href="@Url.Action("UpdateCar","Admin",new { id=i.Id})">Изменить</a>
+            <div class="col-md-12">
+                <div class="col-md-10">
+                    <h4><b>@i.Brand.Name @i.Model</b></h4>
+                    <h4><b>Номер: </b>@i.Number</h4>
+                    <h4><b>@i.Price</b> грн. сутки</h4>
+                </div>
+                <div class="col-md-2">
+                    @if (!i.IsDeleted)
+                    {
+                        <div>
+                            <a class="btn btn-danger btn-dark" href="@Url.Action("Delete","Admin",new { id=i.Id})"
+                                onclick="return confirm('Поддтвердите действие удаления автомобиля с номером @i.Number.')">Удалить</a>
+                        </div>
+                        <br />
+                        <div>
+                            <a class="btn btn-warning btn-dark" href="@Url.Action("UpdateCar","Admin",new { id=i.Id})">Изменить</a>
+                        </div>
+                    }
+                    else
+                    {
+                        <h3 class="text-danger">Удалена</h3>
+                    }
+                </div>
+            </div>
+            <hr />
         }
     </div>
-   }
 </div>
