--- a/Rental/Rental.WEB/Views/Manager/Return.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/Return.cshtml
@@ -9,9 +9,42 @@
     
 <div class="form-horizontal">
     @Html.HiddenFor(x => x.Order.Id)
-    @Html.DisplayFor(x => x.Order.Id)
-    @Html.DisplayFor(x => x.Order.Car.Brand.Name)
-    @Html.DisplayFor(x => x.Order.Car.Model)
+    <h3>Заказ:</h3>
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                Номер заказа
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(x => x.Order.Id)
+            </dd>
+            <dt>
+                Автомобиль
+            </dt>
+
+            <dd>
+                @Model.Order.Car.Brand.Name @Model.Order.Car.Model
+            </dd>
+
+            <dt>
+                Номер
+            </dt>
+
+            <dd>
+                @Model.Order.Car.Number
+            </dd>
+
+            <dt>
+                Период
+            </dt>
+
+            <dd>
+                с @Model.Order.DateStart.ToShortDateString() по @Model.Order.DateEnd.ToShortDateString()
+            </dd>
+        </dl>
+    </div>
+    <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.IsReturned, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -23,10 +56,10 @@
         </div>
     </div>
     <div class="form-group">
-            @Html.Label("С повреждениями",new { @for= "withCrash" })
+        @Html.Label("С повреждениями", new { @for = "withCrash", @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
-                @Html.CheckBox("withCrash",false,new { id="withCrash"})
+                @Html.CheckBox("withCrash", false, new { id = "withCrash" })
             </div>
         </div>
     </div>
@@ -35,7 +68,7 @@
         @Html.LabelFor(model => model.Crash.Description, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
-                @Html.EditorFor(model => model.Crash.Description)
+                @Html.EditorFor(model => model.Crash.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Crash.Description, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,23 +77,20 @@
         @Html.LabelFor(model => model.Crash.Payment.Price, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
-                @Html.EditorFor(model => model.Crash.Payment.Price)
+                @Html.EditorFor(model => model.Crash.Payment.Price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Crash.Payment.Price, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Подтвердить" class="btn btn-default" />
+            <input type="submit" value="Подтвердить" class="btn btn-default btn-dark" />
         </div>
     </div>
 </div>
-}
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
