--- a/Rental/Rental.WEB/Views/Manager/ShowReturns.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/ShowReturns.cshtml
@@ -1,19 +1,31 @@
 ﻿@model Rental.WEB.Models.View_Models.Manager.ShowReturnsVM
 
 @{
-    ViewBag.Title = "ShowReturns";
+    ViewBag.Title = "Возврат";
 }
 
-<ul class="list-group">
-    @foreach (var i in Model.Orders)
-    {
-        <li class="list-group-item">
-            <div>
-                <h6>@i.Id</h6>
-                <h3>@i.Car.Brand.Name @i.Car.Model</h3>
-                <p>@i.DateStart.ToShortDateString()-@i.DateEnd.ToShortDateString()</p>
-                <a class="btn btn-outline-dark" href="@Url.Action("Return","Manager",new { id=i.Id})">Подтвердить</a>
+@Styles.Render("~/Content/styles/manager/show-returns")
+
+<div class="row">
+    <div class="col-md-4" style="background-color:black; height:1000px;">
+        sd
+    </div>
+    <div class=" col-md-8">
+        @foreach (var i in Model.Orders)
+        {
+        <div class="col-md-12">
+            <div class="col-md-10">
+                <h4><b>Номер: </b>@i.Id</h4>
+                <h4><b>Автомобиль: </b> @i.Car.Brand.Name @i.Car.Model</h4>
+                <h4><b>Период: </b> с @i.DateStart.ToShortDateString() по @i.DateEnd.ToShortDateString()</h4>
+
             </div>
-        </li>
-    }
-</ul>
+            <div class="col-md-2">
+                <a class="btn btn-danger btn-dark" href="@Url.Action("Return","Manager",new { id=i.Id})">Принять</a>
+            </div>
+        </div>
+        <hr />
+
+        }
+    </div>
+</div>
