--- a/Rental/Rental.WEB/Views/Shared/CustomError.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/CustomError.cshtml
@@ -1,18 +1,10 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Error";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CustomError</title>
-</head>
-<body>
-    <div> 
-        ERROR
-    </div>
-</body>
-</html>
+<h1 class="text-center">Запрашиваемые данные не доступны</h1>
+<br />
+<br />
+<div class="text-center">
+    <a href="@Url.Action("Index", "Rent")" class=" btn btn-success btn-dark">На главную</a>
+</div>
