--- a/Rental/Rental.WEB/Views/Shared/_Layout.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title </title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/styles/shared/layout")
     @*<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
@@ -175,12 +176,13 @@
             </a>
         </div>
         <div class="col-md-12">
-            <p > @DateTime.Now.Year Все права защищены </p>
+            <p> @DateTime.Now.Year Все права защищены </p>
         </div>
     </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jqueryui")
     @RenderSection("scripts", required: false)
 </body>
 </html>
