--- a/Rental/Rental.WEB/Views/Account/Login.cshtml
+++ b/Rental/Rental.WEB/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.View_Models.Account.LoginVM
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Вход";
 }
 
 @using (Html.BeginForm()) 
