--- a/Rental/Rental.WEB/Views/Client/MakePayment.cshtml
+++ b/Rental/Rental.WEB/Views/Client/MakePayment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.Domain_Models.Rent.PaymentDM
 
 @{
-    ViewBag.Title = "MakePayment";
+    ViewBag.Title = "Оплатить";
 }
 
 @using (Html.BeginForm()) 
