--- a/Rental/Rental.WEB/Views/Client/ShowPayments.cshtml
+++ b/Rental/Rental.WEB/Views/Client/ShowPayments.cshtml
@@ -2,7 +2,7 @@
 @model Rental.WEB.Models.View_Models.Client.ShowPaymentsVM
 
 @{
-    ViewBag.Title = "ShowPayments";
+    ViewBag.Title = "Транзакции";
     int f = 0;
     int n = 0;
 }
