--- a/Rental/Rental.WEB/Views/Manager/Confirm.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/Confirm.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.Domain_Models.Rent.ConfirmDM
 
 @{
-    ViewBag.Title = "Confirm";
+    ViewBag.Title = "Принять";
 }
 
 @using (Html.BeginForm()) 
