--- a/Rental/Rental.WEB/Views/Manager/Return.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/Return.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.Domain_Models.Rent.ReturnDM
 
 @{
-    ViewBag.Title = "Return";
+    ViewBag.Title = "Возврат";
 }
 @using (Html.BeginForm()) 
 {
