--- a/Rental/Rental.WEB/Views/Rent/Index.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Index.cshtml
@@ -2,7 +2,7 @@
 @model Rental.WEB.Models.View_Models.Rent.IndexVM
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Cardoor";
     int f = 0;
     int n = 0;
 }
