--- a/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
+++ b/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Rental.WEB.Models.Domain_Models.Identity.ProfileDM
 
 @{
-    ViewBag.Title = "CreateProfile";
+    ViewBag.Title = "Профиль";
     List<object> s = new List<object>()
     {
         new {Text="Мужской" },
