--- a/Rental/Rental.WEB/Views/Shared/CustomError.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/CustomError.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Error";
+    ViewBag.Title = "Упс...";
 }
 <h1 class="text-center">Запрашиваемые данные не доступны</h1>
 <br />
